Fix mash crash in ArcRotationLockBridge

BUG=774713

Change-Id: I70179391de854c57c9b7249d5bdab2557f63e7a7
Reviewed-on: https://chromium-review.googlesource.com/719430
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Luis Hector Chavez <lhchavez@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508867}
Former-commit-id: addcbedae6fd53756ae328e4f491e6fcc6958cdd